--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="section header" id="header">
     <div class="container">
         <p class="header-logo">english<span class="header-logo_accent">excellence</span>.</p>
-        <load src="./partials/nav.html" />
+        <load src="./nav.html" />
 
         <button type="button" aria-label="Open menu" class="burger-menu" onclick="toggleMenu('open')">
             <svg class="burger-menu-icon">
