--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,3 @@
-@import url('./variables.css');
-@import url('./common.css');
-@import url('./header.css');
+@import url('./css/variables.css');
+@import url('./css/common.css');
+@import url('./css/header.css');
