--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,47 @@
 <section class="section hero" id="hero">
     <div class="container">
-        
+        <picture class="hero-image">
+            <source
+                srcset="./img/hero/desktop-1x.webp 1x, ./img/hero/desktop-2x.webp 2x, ./img/hero/desktop-3x.webp 3x"
+                type="image/webp"
+                media="(min-width: 1280px)"
+            />
+            <source
+                srcset="./img/hero/desktop-1x.jpg 1x, ./img/hero/desktop-2x.jpg 2x, ./img/hero/desktop-3x.jpg 3x"
+                type="image/jpeg"
+                media="(min-width: 1280px)"
+            />
+            <source
+                srcset="./img/hero/tablet-1x.webp 1x, ./img/hero/tablet-2x.webp 2x, ./img/hero/tablet-3x.webp 3x"
+                type="image/webp"
+                media="(min-width: 768px)"
+            />
+            <source
+                srcset="./img/hero/tablet-1x.jpg 1x, ./img/hero/tablet-2x.jpg 2x, ./img/hero/tablet-3x.jpg 3x"
+                type="image/jpeg"
+                media="(min-width: 768px)"
+            />
+            <source
+                srcset="./img/hero/mobile-1x.webp 1x, ./img/hero/mobile-2x.webp 2x, ./img/hero/mobile-3x.webp 3x"
+                type="image/webp"
+            />
+            <source
+                srcset="./img/hero/mobile-1x.jpg 1x, ./img/hero/mobile-2x.jpg 2x, ./img/hero/mobile-3x.jpg 3x"
+                type="image/jpeg"
+            />
+            <img class="hero-image" src="./img/hero/desktop-1x.jpg" alt="Hero image" />
+        </picture>
+
         <h1 class="hero-title">Discover the joy of learning <span class="hero-title-accent">English</span> with us!</h1>
+
         <a href="#application" class="hero-button" aria-label="Leave an application">Leave an application</a>
+
+        <div class="hero-scroll-down">
+            <a class="scroll-button" href="#footer" aria-label="Scroll to bottom">
+                <svg class="scroll-icon" width="24" height="24">
+                    <use href="./img/icons/sprites.svg#icon-angle-small-left"></use>
+                </svg>
+            </a>
+        </div>
     </div>
 </section>
