common styles for buttons, h2 and subtitles

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
 
     font-family: 'Manrope', sans-serif;
-    font-size: 14px;
+    font-size: var(--font-size-14);
     line-height: 1.71;
     font-weight: 400;
     font-style: normal;
@@ -61,4 +61,88 @@ address {
     clip-path: inset(100%);
     clip: rect(0 0 0 0);
     overflow: hidden;
+}
+
+h2 {
+    font-family: Manrope;
+    font-weight: 700;
+    font-size: 40px;
+    line-height: 48px;
+    text-align: center;
+}
+
+h2 .mark {
+    position: relative;
+    z-index: 1;
+}
+
+h2 .mark::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 2px;
+    width: 100%;
+    height: 20px;
+    border-radius: 8px;
+    background-color: var(--color-highlight);
+    z-index: -1;
+}
+
+.subtitle {
+    font-size: var(--font-size-18);
+    color: var(--color-dark-gray);
+    line-height: 30px;
+    font-weight: 400;
+    text-align: center;
+    max-width: 709px;
+    margin: 0 auto;
+}
+
+.highlight {
+    color: var(--color-highlight);
+}
+
+.btn {
+    display: inline-block;
+    font-size: var(--font-size-18);
+    line-height: 28px;
+    font-weight: 700;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 12px;
+    padding: 16px 64px;
+    white-space: nowrap;
+    width: 100%;
+    max-width: 306px;
+    outline: none;
+    border: none;
+    transition: var(--transition);
+}
+
+.btn-primary {
+    background-color: var(--color-green);
+    color: var(--color-white);
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: var(--color-green-hover);
+}
+
+.btn-inverse {
+    color: var(--color-white);
+    border: 1px solid var(--color-white);
+}
+
+.btn-inverse:hover {
+    background-color: var(--color-white);
+    color: var(--color-green);
+}
+
+@media screen and (max-width: 768px) {
+    .btn {
+      font-size: var(--font-size-14);
+      max-width: 295px;
+    }
 }
