--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,8 +1,8 @@
 <section class="section application" id="application">
     <div class="container">
         <div class="application-title">
-            <h2 class="application-head">Leave an <span class="application-head-span">application</span></h2>
-            <p class="application-p">
+            <h2 class="application-head">Leave an  <span class="mark">application</span></h2>
+            <p class="subtitle">
                 Please use the form below to contact us. Enter your name, email, and message and we'll get back to you
                 shortly.
             </p>
