--- a/src/partials/cta.html
+++ b/src/partials/cta.html
@@ -1,5 +1,5 @@
 <section class="section cta" id="cta">
     <div class="container">
-        <h2 class="cta-title">Master the <span class="cta-title-accent">Language</span> with Our English Package!</h2>
+        <h2 class="cta-title">Master the <span class="highlight">Language</span> with Our English Package!</h2>
     </div>
 </section>
