--- a/src/partials/feedback.html
+++ b/src/partials/feedback.html
@@ -1,8 +1,8 @@
 <section class="section feedback" id="feedback">
     <div class="container">
         <div class="feedback-title">
-            <h2 class="feedback-head">What our <span class="feedback-head-span">students</span> say</h2>
-            <p class="feedback-p">
+            <h2 class="feedback-head">What our <span class="mark">students</span> say</h2>
+            <p class="subtitle">
                 Hear from our students about their learning journey with us, as they share their experiences, progress,
                 and the transformative impact
             </p>
