--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -32,9 +32,9 @@
             <img class="hero-image" src="./img/hero/desktop-1x.jpg" alt="Hero image" />
         </picture>
 
-        <h1 class="hero-title">Discover the joy of learning <span class="hero-title-accent">English</span> with us!</h1>
+        <h1 class="hero-title">Discover the joy of learning <span class="highlight">English</span> with us!</h1>
 
-        <a href="#application" class="hero-button" aria-label="Leave an application">Leave an application</a>
+        <a href="#application" class="btn btn-primary" aria-label="Leave an application">Leave an application</a>
 
         <div class="hero-scroll-down">
             <a class="scroll-button" href="#footer" aria-label="Scroll to bottom">
