--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -1,16 +1,24 @@
 :root {
     --color-black: #121417;
     --color-white: #ffffff;
+    --color-dark-gray: rgba(18, 20, 23, 0.5);
     --color-green: #4dc274;
+    --color-green-hover: #38ae5f;
     --color-lightgreen: #d4fde1;
+    --color-highlight: #BEE8CC;
     --color-gray: #f3f5f6;
 
     --green-gradient: linear-gradient(90deg, #4dc274 0%, #bee8cc 100%);
     --animation-delay: 0.2s;
     --animation: var(--animation-delay) ease-in-out;
+    --transition: background-color var(--animation);
+
+    --font-size-18: 18px;
+    --font-size-14: 14px;
 
     --mobile-min-width: 320px;
     --mobile-max-width: 375px;
     --tablet-width: 768px;
     --desktop-width: 1280px;
+
 }
