--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,8 +1,8 @@
 <section class="section about" id="about">
     <div class="container">
         <div class="about-title">
-            <h2 class="about-head">About <span class="about-head-span">Us</span></h2>
-            <p class="about-title-p">
+            <h2 class="about-head">About <span class="mark">Us</span></h2>
+            <p class="subtitle">
                 We are dedicated to providing engaging and effective English language courses in a supportive and
                 stimulating learning environment
             </p>
