--- a/src/partials/cta.html
+++ b/src/partials/cta.html
@@ -1,5 +1,56 @@
 <section class="section cta" id="cta">
-    <div class="container">
-        <h2 class="cta-title">Master the <span class="cta-title-accent">Language</span> with Our English Package!</h2>
+  <div class="container">
+    <h2 class="cta-title">
+      Master the <span class="cta-title-accent">Language</span> with Our English
+      Package!
+    </h2>
+    <div class="cta-cards">
+      <div class="cta-firstbg-card"></div>
+      <div class="cta-secondbg-card"></div>
+      <div class="cta-thirdmain-card">
+        <!-- <div class="cta-content"> -->
+        <h3 class="cta-card-title">Power of English</h3>
+        <ul class="cta-card-list">
+          <li class="cta-list-item">
+            <svg class="cta-list-svg" width="20" height="20">
+              <use href="../img/sprite.svg#icon-check"></use>
+            </svg>
+            <p>
+              Dive into captivating lessons designed to stimulate your
+              curiosity.
+            </p>
+          </li>
+          <li class="cta-list-item">
+            <svg class="cta-list-svg" width="20" height="20">
+              <use href="../img/sprite.svg#icon-check"></use>
+            </svg>
+            <p>
+              Learn in a nurturing setting where every student's progress
+              matters.
+            </p>
+          </li>
+          <li class="cta-list-item">
+            <svg class="cta-list-svg" width="20" height="20">
+              <use href="../img/sprite.svg#icon-check"></use>
+            </svg>
+            <p>
+              Experience the satisfaction of real progress as your language
+              skills and confidence grow with every session.
+            </p>
+          </li>
+          
+        </ul>
+        <img
+          class="img cta-img"
+          srcset="./img/bookstack/1x.png 1x, ./img/bookstack/2x.png 2x"
+          src="./img/bookstack/1x.png"
+          alt="tall stack of books"
+          width="214"
+          height="263"
+        />
+        <a class="cta-link" href="#application">Leave an application</a>
+        <!-- </div> -->
+      </div>
     </div>
+  </div>
 </section>
