--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,6 @@
-@import url('./variables.css');
-@import url('./common.css');
-@import url('./header.css');
-@import url('./hero.css');
+@import url("./variables.css");
+@import url("./common.css");
+@import url("./header.css");
+@import url("./hero.css");
+@import url("./about.css");
+
