--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -3,9 +3,14 @@
     --color-white: #ffffff;
     --color-green: #4dc274;
     --color-lightgreen: #d4fde1;
+    --color-lightestgreen: #bee8cc;
     --color-gray: #f3f5f6;
 
-    --green-gradient: linear-gradient(90deg, #4dc274 0%, #bee8cc 100%);
+    --green-gradient: linear-gradient(
+        90deg,
+        var(--color-green) 0%,
+        var(--color-lightestgreen) 100%
+    );
     --animation-delay: 0.2s;
     --animation: var(--animation-delay) ease-in-out;
 
