--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,4 +1,13 @@
 @import url('./variables.css');
 @import url('./common.css');
+@import url('./about.css');
+@import url('./application.css');
+@import url('./cta.css');
+@import url('./feedback.css');
+@import url('./footer.css');
 @import url('./header.css');
 @import url('./hero.css');
+@import url('./lessons.css');
+@import url('./menu.css');
+@import url('./nav.css');
+@import url('./team.css');
