--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,14 +1,102 @@
 <section class="section application" id="application">
     <div class="container">
         <div class="application-title">
-            <h2 class="application-head">Leave an  <span class="underline">application</span></h2>
+            <h2 class="application-head">application an  <span class="underline">application</span></h2>
             <p class="subtitle">
                 Please use the form below to contact us. Enter your name, email, and message and we'll get back to you
                 shortly.
             </p>
         </div>
+        
         <div class="application-block">
-            
+            <div class="application-card-wrapper">
+            </div>
+            <form class="application-form application-feedback" id="applicationForm">
+                <div class="application-input-group">
+                  <input
+                    class="application-form-input"
+                    type="text"
+                    name="user-name"
+                    placeholder="Name"
+                  />
+                  <input
+                    class="application-form-input"
+                    type="email"
+                    name="user-email"
+                    placeholder="Email"
+                  />
+                  <input
+                    class="application-form-input"
+                    type="tel"
+                    name="user-phone"
+                    placeholder="Phone"
+                  />
+                  <textarea
+                    class="application-form-input teaxtarea-input"
+                    name="user-comment"
+                    placeholder="Comment"
+                    rows="4"
+                  ></textarea>
+                </div>
+                <fieldset class="application-radio-group">
+                  <legend class="application-radio-group-title">Choose a teacher</legend>
+                  <div class="application-radio">
+                    <input
+                      class="application-radio-input"
+                      type="radio"
+                      name="teacher"
+                      value="maria"
+                      id="radio-Maria"
+                      checked
+                    />
+                    <label class="application-radio-label" for="radio-Maria">Maria</label>
+                  </div>
+                  <div class="application-radio">
+                    <input
+                      class="application-radio-input"
+                      type="radio"
+                      name="teacher"
+                      value="artem"
+                      id="radio-Artem"
+                    />
+                    <label class="application-radio-label" for="radio-Artem">Artem</label>
+                  </div>
+                  <div class="application-radio">
+                    <input
+                      class="application-radio-input"
+                      type="radio"
+                      name="teacher"
+                      value="ilona"
+                      id="radio-Ilona"
+                    />
+                    <label class="application-radio-label" for="radio-Ilona">Ilona</label>
+                  </div>
+                  <div class="application-radio">
+                    <input
+                      class="application-radio-input"
+                      type="radio"
+                      name="teacher"
+                      value="volodymyr"
+                      id="radio-input"
+                    />
+                    <label class="application-radio-label" for="radio-input">Volodymyr</label
+                    >
+                  </div>
+                </fieldset>
+
+                <!--Не впевненна на рахунок класів для кнопки з загальних стилів-->
+
+                <button class="application-form-btn btn btn-primary" type="submit" id="submitButton">
+                  Send
+                </button>
+                <p class="application-form-policy">
+                  By clicking on “Send” button, you agree to our
+                  <a class="application-form-policy-link" href="">Privacy Policy</a>, and
+                  allow Promodo to use this information for marketing purposes.
+                </p>
+              </form>
+
+
         </div>
     </div>
 </section>
