--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,7 +1,7 @@
 <section class="section application" id="application">
     <div class="container">
         <div class="application-title">
-            <h2 class="application-head">application an  <span class="underline">application</span></h2>
+            <h2 class="application-head">Leave an  <span class="underline">application</span></h2>
             <p class="subtitle">
                 Please use the form below to contact us. Enter your name, email, and message and we'll get back to you
                 shortly.
