--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -10,6 +10,15 @@
         
         <div class="application-block">
             <div class="application-card-wrapper">
+              <div class="application-text-wrapper">
+                <p class="application-card-big-text">1000</p>
+                <p class="application-card-text">
+                  of our online English language lessons! This journey has been full
+                  of discovery, growth and unforgettable moments, and we are happy to
+                  share this joyful event with you.
+                </p>
+              </div>
+      
             </div>
             <form class="application-form application-feedback" id="applicationForm">
                 <div class="application-input-group">
@@ -84,13 +93,11 @@
                   </div>
                 </fieldset>
 
-                <!--Не впевненна на рахунок класів для кнопки з загальних стилів-->
-
                 <button class="application-form-btn btn btn-primary" type="submit" id="submitButton">
                   Send
                 </button>
                 <p class="application-form-policy">
-                  By clicking on “Send” button, you agree to our
+                  By clicking on "Send" button, you agree to our
                   <a class="application-form-policy-link" href="">Privacy Policy</a>, and
                   allow Promodo to use this information for marketing purposes.
                 </p>
