--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -16,6 +16,7 @@
     --animation-delay: 0.2s;
     --animation: var(--animation-delay) ease-in-out;
     --transition: background-color var(--animation);
+    --transition-basic: 750ms cubic-bezier(0.4, 0, 0.2, 1);
 
     --font-size-18: 18px;
     --font-size-14: 14px;
