--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,5 +1,5 @@
 <section class="section application" id="application">
-    <div class="container">
+    <div class="application-container container">
         <div class="application-title">
             <h2 class="application-head">Leave an  <span class="underline">application</span></h2>
             <p class="subtitle">
