--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,120 @@
 <footer class="section footer" id="footer">
     <div class="container">
         <div class="footer-content">
-        </div>  
+            <a href="./index.html" class="header-logo"
+                >english<span class="header-logo_accent">excellence</span>.
+            </a>
+            <ul>
+                <li>
+                    <p class="small-footer-text">Phone number:</p>
+                    <a class="" href="tel:+380684439426">+380 (68) 443-94-26</a>
+                </li>
+                <li>
+                    <p class="small-footer-text">Address:</p>
+                    <a
+                        href="https://www.google.com/maps/"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                        >32a M. Bazhana ave</a
+                    >
+                </li>
+            </ul>
+            <ul class="nav-items">
+                <li class="nav-item">
+                    <a
+                        href="#about"
+                        class="nav-link"
+                        aria-label="Section About us"
+                        >About us</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a
+                        href="#lessons"
+                        class="nav-link"
+                        aria-label="section Our lessons"
+                        >Our lessons</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a
+                        href="#teachers"
+                        class="nav-link"
+                        aria-label="section Our teachers"
+                        >Teachers</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a
+                        href="#feedback"
+                        class="nav-link"
+                        aria-label="section Reviews"
+                        >Reviews</a
+                    >
+                </li>
+                <li class="nav-item">
+                    <a
+                        href="#application"
+                        class="nav-link"
+                        aria-label="section Contact us"
+                        >Contact us</a
+                    >
+                </li>
+            </ul>
+            <ul class="soc-items">
+                <li class="soc-item white">
+                    <a
+                        href="https://www.facebook.com/goITclub/"
+                        class="soc-link"
+                        aria-label="Facebook"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <svg class="icon" width="42" height="42">
+                            <use href="./img/icons/sprites.svg#facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="soc-item white">
+                    <a
+                        href="https://www.instagram.com/goitclub/ "
+                        class="soc-link"
+                        aria-label="Instagram"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <svg class="icon" width="42" height="42">
+                            <use href="./img/icons/sprites.svg#instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="soc-item white">
+                    <a
+                        href="https://www.youtube.com/c/GoIT"
+                        class="soc-link"
+                        aria-label="Youtube"
+                        target="_blank"
+                        rel="noopener noreferrer"
+                    >
+                        <svg class="icon" width="42" height="42">
+                            <use href="./img/icons/sprites.svg#youtube"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+            <div class="footer-end">
+                <p>©2023 English Excellence. All rights reserved.</p>
+                <ul>
+                    <li>
+                        <a class="small-footer-text" href="#">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a class="small-footer-text" href="#"
+                            >Team of Service</a
+                        >
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
 </footer>
