--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -7,6 +7,7 @@
     --color-lightgreen: #d4fde1;
     --color-lightestgreen: #bee8cc;
     --color-gray: #f3f5f6;
+    --color-black-50: #12141780;
 
     --green-gradient: linear-gradient(
         90deg,
