--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -3,10 +3,10 @@
         <p class="header-logo">english<span class="header-logo_accent">excellence</span>.</p>
         <load src="/partials/nav.html" />
 
-        <button type="button" aria-label="Open menu" class="burger-menu" onclick="toggleMenu('open')">
-            <svg class="burger-menu-icon">
-                <use href="./img/icons/sprites.svg#burger32"></use>
-            </svg>
+        <button type="button" aria-label="Open menu" class="burger-menu" id="burger-btn" onclick="toggleMenu()">
+            <span class="burger-line burger-line-1"></span>
+            <span class="burger-line burger-line-2"></span>
+            <span class="burger-line burger-line-3"></span>
         </button>
     </div>
 </header>
