--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,10 +3,7 @@
 @import url('./header.css');
 @import url('./hero.css');
 @import url('./cta.css');
-
-@import url("./variables.css");
-@import url("./common.css");
-@import url("./about.css");
-@import url("./header.css");
-@import url("./hero.css");
-@import url("./application.css");
+@import url('./variables.css');
+@import url('./about.css');
+@import url('./application.css');
+@import url('./mobile-menu.css');
