--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,120 +1,130 @@
 <footer class="section footer" id="footer">
-    <div class="container">
+    <div class="container dark">
         <div class="footer-content">
-            <a href="./index.html" class="header-logo"
-                >english<span class="header-logo_accent">excellence</span>.
-            </a>
-            <ul>
-                <li>
-                    <p class="small-footer-text">Phone number:</p>
-                    <a class="" href="tel:+380684439426">+380 (68) 443-94-26</a>
-                </li>
-                <li>
-                    <p class="small-footer-text">Address:</p>
-                    <a
-                        href="https://www.google.com/maps/"
-                        target="_blank"
-                        rel="noopener noreferrer"
-                        >32a M. Bazhana ave</a
-                    >
-                </li>
-            </ul>
+            <div>
+                <a href="./index.html" class="header-logo white"
+                    >english<span class="header-logo_accent">excellence</span>.
+                </a>
+                <ul class="contact-footer">
+                    <li class="contact-footer-item">
+                        <p class="small-footer-text">Phone number:</p>
+                        <a class="nav-link white" href="tel:+380684439426"
+                            >+380 (68) 443-94-26</a
+                        >
+                    </li>
+                    <li class="contact-footer">
+                        <p class="small-footer-text">Address:</p>
+                        <a
+                            class="nav-link white"
+                            href="https://www.google.com/maps/place/%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82+%D0%9C%D0%B8%D0%BA%D0%BE%D0%BB%D0%B8+%D0%91%D0%B0%D0%B6%D0%B0%D0%BD%D0%B0,+32%D0%90,+%D0%9A%D0%B8%D1%97%D0%B2,+%D0%A3%D0%BA%D1%80%D0%B0%D1%97%D0%BD%D0%B0,+02000/@50.3973092,30.6455519,16z/data=!4m6!3m5!1s0x40d4c450580cb0ef:0xa9ecbb77005418c9!8m2!3d50.3972693!4d30.6483532!16s%2Fg%2F11cnchy4dm!5m1!1e4?entry=ttu&g_ep=EgoyMDI1MDMxOC4wIKXMDSoASAFQAw%3D%3D"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            >32a M. Bazhana ave</a
+                        >
+                    </li>
+                </ul>
+            </div>
             <ul class="nav-items">
-                <li class="nav-item">
+                <li class="nav-item white">
                     <a
                         href="#about"
-                        class="nav-link"
+                        class="nav-link white"
                         aria-label="Section About us"
                         >About us</a
                     >
                 </li>
-                <li class="nav-item">
+                <li class="nav-item white">
                     <a
                         href="#lessons"
-                        class="nav-link"
+                        class="nav-link white"
                         aria-label="section Our lessons"
                         >Our lessons</a
                     >
                 </li>
-                <li class="nav-item">
+                <li class="nav-item white">
                     <a
                         href="#teachers"
-                        class="nav-link"
+                        class="nav-link white"
                         aria-label="section Our teachers"
                         >Teachers</a
                     >
                 </li>
-                <li class="nav-item">
+                <li class="nav-item white">
                     <a
                         href="#feedback"
-                        class="nav-link"
+                        class="nav-link white"
                         aria-label="section Reviews"
                         >Reviews</a
                     >
                 </li>
-                <li class="nav-item">
+                <li class="nav-item white">
                     <a
                         href="#application"
-                        class="nav-link"
+                        class="nav-link white"
                         aria-label="section Contact us"
                         >Contact us</a
                     >
                 </li>
             </ul>
-            <ul class="soc-items">
-                <li class="soc-item white">
+            <ul class="soc-items white">
+                <li class="soc-item">
                     <a
                         href="https://www.facebook.com/goITclub/"
-                        class="soc-link"
+                        class="soc-link white"
                         aria-label="Facebook"
                         target="_blank"
                         rel="noopener noreferrer"
                     >
-                        <svg class="icon" width="42" height="42">
+                        <svg class="soc-icon white" width="44" height="44">
                             <use href="./img/icons/sprites.svg#facebook"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="soc-item white">
+                <li class="soc-item">
                     <a
                         href="https://www.instagram.com/goitclub/ "
-                        class="soc-link"
+                        class="soc-link white"
                         aria-label="Instagram"
                         target="_blank"
                         rel="noopener noreferrer"
                     >
-                        <svg class="icon" width="42" height="42">
+                        <svg class="soc-icon white" width="44" height="44">
                             <use href="./img/icons/sprites.svg#instagram"></use>
                         </svg>
                     </a>
                 </li>
-                <li class="soc-item white">
+                <li class="soc-item">
                     <a
                         href="https://www.youtube.com/c/GoIT"
-                        class="soc-link"
+                        class="soc-link white"
                         aria-label="Youtube"
                         target="_blank"
                         rel="noopener noreferrer"
                     >
-                        <svg class="icon" width="42" height="42">
+                        <svg class="soc-icon white" width="44" height="44">
                             <use href="./img/icons/sprites.svg#youtube"></use>
                         </svg>
                     </a>
                 </li>
             </ul>
-            <div class="footer-end">
-                <p>©2023 English Excellence. All rights reserved.</p>
-                <ul>
-                    <li>
-                        <a class="small-footer-text" href="#">Privacy Policy</a>
-                    </li>
-                    <li>
-                        <a class="small-footer-text" href="#"
-                            >Team of Service</a
-                        >
-                    </li>
-                </ul>
+        </div>
+        <div class="footer-end">
+            <p class="small-footer-text">
+                ©2023 English Excellence. All rights reserved.
+            </p>
+            <div class="footer-rules">
+                <a class="small-footer-text" href="#">Privacy Policy</a>
+                <a class="small-footer-text" href="#">Team of Service</a>
             </div>
+        </div>
+        <div>
+            <a class="scroll-button up" href="#header" aria-label="Scroll up">
+                <svg class="scroll-icon up" width="24" height="24">
+                    <use
+                        href="./img/icons/sprites.svg#icon-angle-small-left"
+                    ></use>
+                </svg>
+            </a>
         </div>
     </div>
 </footer>
