--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,4 +4,4 @@
 @import url("./about.css");
 @import url("./header.css");
 @import url("./hero.css");
-@import url("./footer.css")
+@import url("./footer.css");
