css and corrected html
corrected section header base on about section

--- a/src/css/application.css
+++ b/src/css/application.css
@@ -1,23 +1,103 @@
-@media screen and (min-width: 1280px) {
-    .application-container {
-        width: 1024px;
+
+
+@media screen and (min-width: 768px) {
+    .application .section-description {
+        padding: 0 23px;
     }
 }
 
-.application-block {
+@media screen and (min-width: 1280px) {
+    .application .section-description {
+        padding: 0 61px;
+    }
 }
-.application-card-wrapper {
+
+.application-block { 
+    display: flex;
 }
-.application-text-wrapper {
-}
+
+ .application-title {
+      margin-bottom: 40px;
+    }
+
+@media screen and (min-width: 768px) {
+        .application-title {
+          margin-bottom: 64px;
+        }
+      }
+ 
+@media screen and (min-width: 768px) {
+    .subtitle{
+        margin-top: 16px;
+    }
+  }
+
+
+@media screen and (min-width: 1280px) {
+    .application-block {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+  
+
+  @media screen and (min-width: 1280px) {
+    .application-card-wrapper {
+      display: flex;
+      flex-direction: column;
+      padding: 0px 20px 40px 20px;
+      justify-content: flex-end;
+      align-items: center;
+      background-image: url('../img/application/2x.png');
+      background-repeat: no-repeat;
+      background-color: var(--color-green);
+      border-radius: 30px;
+      width: 492px;
+      height: 578px;
+    }
+  }
+
+  @media screen and (max-width: 1280px) {
+    .application-card-wrapper {
+      display: none;
+    }
+  }
+
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
+    screen and (min-resolution: 192dpi) and (min-width: 1280px),
+    screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+    .application-card-wrapper {
+      background-image: url('../img/application/3x.webp');
+      background-size: 492px;
+      background-position: top;
+    }
+  }
+  
 .application-card-big-text {
+    margin-bottom: 8px;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.2;
+  letter-spacing: -0.02em;
+
+  color: var(--color-white);
+
 }
 .application-card-text {
+    text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5;
+
+  color: rgba(255, 255, 255, 0.7);
 }
+
 .application-form {
     display: flex;
     flex-direction: column;
     margin: 0px auto;
+
 }
 @media screen and (min-width: 1280px) {
     .application-form {
@@ -52,6 +132,7 @@
     outline: transparent;
     resize: none;
 }
+
 .application-form-input:not(.invalid):hover,
 .application-form-input:not(.invalid):focus {
     border-color: var(--color-green);
@@ -163,7 +244,7 @@
     top: 3px;
     left: 0;
     z-index: 1;
-    transition: border-color var(--transition-basic);
+    transition: border-color var(--transition-time-and-func);
 }
 
 @media screen and (min-width: 768px) {
@@ -186,7 +267,7 @@
     top: 7px;
     left: 4px;
     z-index: 2;
-    transition: opacity var(--transition-basic);
+    transition: opacity var(--transition-time-and-func);
 }
 
 @media screen and (min-width: 768px) {
@@ -218,7 +299,7 @@
     font-size: 14px;
     font-weight: 700;
     line-height: 1.71;
-    transition: background-color var(--transition-basic);
+    transition: background-color var(--transition-time-and-func);
 }
 
 .application-form-btn:hover,
@@ -255,5 +336,6 @@
   
 .application-form-policy-link {
     text-decoration-line: underline;
-    text-decoration-color: var(--color-dark-gray)  
+    text-decoration-color: var(--color-dark-gray);
+    color: var(--color-dark-gray);   
 }
