--- a/src/partials/application.html
+++ b/src/partials/application.html
@@ -1,8 +1,8 @@
 <section class="section application" id="application">
-    <div class="application-container container">
-        <div class="application-title">
-            <h2 class="application-head">Leave an  <span class="underline">application</span></h2>
-            <p class="subtitle">
+    <div class=" container">
+        <div class="application-title ">
+            <h2 class="section-title">Leave an  <span class="underline">application</span></h2>
+            <p class="section-description">
                 Please use the form below to contact us. Enter your name, email, and message and we'll get back to you
                 shortly.
             </p>
