--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -5,6 +5,8 @@
     background-color: var(--color-black);
     padding: 40px 20px 20px;
     position: relative;
+    box-shadow: 0 0 0 100vmax var(--color-black);
+    clip-path: inset(0 -100vmax -100vmax);
 
     @media screen and (min-width: 768px) {
         padding: 32px 36px 16px 32px;
