--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,10 +1,10 @@
 <section class="section team" id="teachers">
     <div class="container">
         <div class="team-title">
-            <h2 class="team-head">
+            <h2 class="section-title">
                 Meet our <span class="underline">teachers</span>
             </h2>
-            <p class="subtitle">
+            <p class="section-description">
                 Discover our team of dedicated educators, committed to guiding
                 you on your journey to English proficiency with personalized and
                 engaging instruction
