--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,8 +1,8 @@
-@import url('./variables.css');
-@import url('./common.css');
-@import url('./header.css');
-@import url('./hero.css');
-@import url('./cta.css');
+@import url("./variables.css");
+@import url("./common.css");
+@import url("./header.css");
+@import url("./hero.css");
+@import url("./cta.css");
 
 @import url("./variables.css");
 @import url("./common.css");
@@ -10,3 +10,4 @@
 @import url("./header.css");
 @import url("./hero.css");
 @import url("./application.css");
+@import url("./feedback.css");
